main: Update some deprecated Java API.
We still have some implementations and calls to `Object.finalize()` but changing that is breaking so it should wait until 4.0.